--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,66 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.clearfix::after{
+  content: '';
+  display: table;
+  clear: both;
+}
+
+/* HEADER */
+
+header{
+  position: fixed;
+  background-color: lightskyblue;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  padding: 0 20px;
+}
+
+.btn{
+  border: 1px solid grey;
+  padding: 5px 15px;
+  text-decoration: none;
+}
+
+.blue-btn{
+  color: white;
+  background-color: blue;
+}
+
+.left-header{
+  float: left;
+}
+
+.right-header{
+  float: right;
+}
+
+.nav, .nav ul li{
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 30px;
+}
+
+.nav ul li:hover{
+  border-bottom: 2px solid black;
+}
+
+.left-header img{
+  vertical-align: middle;
+  margin-right: 30px;
+}
+
+.nav ul li a{
+  color: black;
+  text-decoration: none;
+  line-height: 70px;
+}
+
+#inizia{
+  display: inline-block;
+}
+
+
