--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ header{
 section.full-view{
   background-color: #b4d0e7;
   width: 100%;
+  height: 900px;
   margin-bottom: 80px;
 }
 
@@ -137,10 +138,12 @@ section.full-view{
   margin: 0 auto;
 }
 
-.container h2{
+/* BUSINESS BLOCK*/
+.check-business h2{
   font-size: 50px;
   font-weight: bold;
   margin-bottom: 50px;
+  padding-top: 250px;
 }
 
 .check-business{
@@ -154,12 +157,27 @@ section.full-view{
 .block-business{
   min-width: 1000px;
 }
-
+ /* blocchi business */
 .block{
-  display: inline-block;
-  width: calc(33,33% - 160px);
-  height: 700px;
+  float: left;
+  width: calc(33,33% - 40px);
   border: 1px solid black;
+}
+
+.block-business{
+  margin-bottom: 60px;
+}
+
+.block-business .block.middle-box{
+  margin: 0 20px;
+}
+
+.middle-block{
+  margin-bottom: 60px;
+}
+
+.top-block h3{
+  font-weight: 900;
 }
 
 .block-business .top-block{
@@ -168,17 +186,57 @@ section.full-view{
   border-bottom: 1px solid black;
 }
 
-.block .middle-block{
-  padding: 20px 10px;
+.block .middle-block, .bottom-block{
+  padding: 20px;
 }
 
 .middle-block h2{
+  margin-bottom: 15px;
+}
+
+.middle-block .price-business{
+  margin-bottom: 15px;
+}
+
+.middle-block .date-business{
+  margin-bottom: 50px;
+}
+
+.utent-business, .storage-business{
   margin-bottom: 20px;
 }
 
-.block-business .block.middle-box{
-  margin: 0 80px;
+.function-business, .try-business{
+  margin-bottom: 50px;
 }
+
+.shopnow-business span{
+  padding-bottom: 40px;
+  border-bottom: 1px solid #000;
+}
+
+.bottom-block h4{
+  margin-bottom: 25px;
+}
+
+.bottom-block ul li{
+  padding: 15px 0;
+}
+
+/* BLOCK TEAM */
+.block-team{
+  border: 1px solid black;
+}
+
+.block-team .top-block{
+  text-align: center;
+  padding: 15px 0;
+}
+
+
+
+
+
 
 
 
